@@ -1,23 +1,5 @@
 # clj-boot
 
-Boot tasks simplifying development and deployment.
+Please see the gh-pages site:
 
-[![Clojars Project](https://img.shields.io/clojars/v/coconutpalm/clj-boot.svg)](https://clojars.org/coconutpalm/clj-boot)
-
-This is a very early access project that is changing rapidly.
-
-One way to configure clj-boot is to use a boot wrapper that sets the required environment variables.
-e.g.:
-
-```bash
-#!/usr/bin/env bash
-
-export BOOT_JVM_OPTIONS='-client -XX:+TieredCompilation -XX:TieredStopAtLevel=1 -Xverify:none -Xmx2g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-OmitStackTraceInFastThrow'
-
-export CLOJARS_USER='clojars-username'
-export CLOJARS_PASS='clojars-password'
-export CLOJARS_GPG_USER='username@host.for.gpg.com'
-export CLOJARS_GPG_PASS='gpg-key-password-for-signing'
-```
-
-See https://gist.github.com/chrisroos/1205934 under "method 2" to import deployment/signing keys into your account.
+https://coconutpalm.github.io/clj-boot/
